<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<groupId>net.certiv</groupId>
	<artifactId>net.certiv</artifactId>
	<version>1.0.7-SNAPSHOT</version>

	<name>net.certiv.tools :: parent</name>
	<description>Certiv Tools parent</description>
	<organization>
		<name>Certiv Analytics</name>
		<url>www.certiv.net</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<tycho.version>1.3.0</tycho.version>
		<java.version>1.8</java.version>
		<eclipse-repo.url>http://download.eclipse.org/releases/2019-03</eclipse-repo.url>
	</properties>

	<repositories>
		<repository>
			<id>eclipse</id>
			<layout>p2</layout>
			<url>${eclipse-repo.url}</url>
		</repository>
	</repositories>

	<build>
		<plugins>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<includePackedArtifacts>true</includePackedArtifacts>
					<eclipse.p2.mirrors>false</eclipse.p2.mirrors>
					<dependency-resolution>
						<optionalDependencies>require</optionalDependencies>
					</dependency-resolution>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<compilerArgs>
						<arg>-warn:-raw,unchecked</arg>
					</compilerArgs>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<format>yyyyMMdd-HHmm</format>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<tycho.test.platformArgs>-XstartOnFirstThread</tycho.test.platformArgs>
			</properties>
		</profile>
	</profiles>

	<modules>
		<module>net.certiv.tools</module>
		<module>net.certiv.tools.feature</module>
		<module>net.certiv.tools.site</module>
	</modules>
</project>
